* Add `HOST_DOC` to ensure `ctx_doc` is reset when not passing a context to match()/select(). [jddalton]

* Revert to character comparisons using `@` for non-element nodes. [Diego Perini]

* Add persisted `lastNormalized` variable, remove `normSelector` and `origSelector` from select_regular() and match(). [jddalton]

* Make match() return false if an element is not provided. [jddalton]

* Move regexps off the `Optimize` object and ensure context is only matched in a selector where it's assumed. [jddalton]
  For example element `<div><li><em>foo</em></li></div>` would return results for select('> li em', div) but not select('div li em', div).

* unit test: Update Slick tests and add Slick YUI specs. [jddalton]

* Tweak byName() to maintain its speed and still pass unit tests. [jddalton]

* Add support for the CSS3 lang pseudo-class. [Diego Perini, jddalton]

* Escape quotes when compiling attribute, `:not`, and `:contains` selectors. [jddalton]

* Standardize variable names with prefixes:
  `ctx` for context vars, `str` for string, `re` for regexps, `cpl` for compiler constants, `test` for simulated regexp tests, and `cache`. [jddalton]

* Tweak compiled source for ancestor and child combinators. [Diego Perini, jddalton]

* Make compileSelector() compile context specific functions, but only cache those from contexts that match the host document type. [Diego Perini, jddalton]

* Tweak byId(), avoid byTag() when possible, fix minor `RE_SIMPLE_SELECTOR` regression, and simplify gEBN bug checks. [jddalton]

* Remove `this` dependency from setQSA() and rename `RE_BUGGY_QSAPI` to `RE_BUGGY_QSA`. [Diego Perini, jddalton]

* Add support for performing selectors on document fragments by treating them as `notHTML`. [jddalton]

* Tweak compiled id/tag selector code and ensure s.getAttribute() returns an empty string when getAttributeNode() is null. [jddalton]
