@@ -1,3 +1,5 @@
+* Make compileSelector() pass `match, source, mode, selector` to callbacks. [jddalton]
+
 * Add `HOST_DOC` to ensure `ctx_doc` is reset when not passing a context to match()/select(). [jddalton]
 
 * Revert to character comparisons using `@` for non-element nodes. [Diego Perini]
